# juliana-engine-sdl2

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.claude/: launch.json  settings.local.json
.github/workflows/: build.yml
_bmad/: config.toml  config.user.toml
_bmad-output/: gdd.md
_bmad/_config/: bmad-help.csv  files-manifest.csv  manifest.yaml  skill-manifest.csv
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
_bmad/gds/: config.yaml
cmake/: patch_sol2.py
spec/: aetherium-gameplay.md  algorithms.md  architecture.md  gameplay.md
spec/architecture/: action-map.md  aspect-system.md  backgrounds.md  container-system.md  entity-system.md  materials.md  named-points.md  networking.md  overview.md  packages.md  physics.md  procedure-system.md  scenario-system.md  scripting.md  terrain-pressure-system.md  terrain-system.md  world-query-api.md
src/: Game.cpp  Game.h  main.cpp
src/camera/: GameCamera.cpp  GameCamera.h
src/core/: Color.h  Engine.cpp  Engine.h  EngineLog.cpp  EngineLog.h  FixedPoint.h  GameLoop.cpp  GameLoop.h  LogConsole.cpp  LogConsole.h  Math.h  Types.h  Window.cpp  Window.h
src/debug/: DebugOverlay.cpp  DebugOverlay.h
src/entity/: ActionMap.cpp  ActionMap.h  Character.cpp  Character.h  CharacterFSM.h  Entity.h  EntityManager.cpp  EntityManager.h  RigidBody.cpp  RigidBody.h
src/game/: GameDef.h  GameLoader.cpp  GameLoader.h
src/input/: InputAction.h  InputBinding.h  InputManager.cpp  InputManager.h  InputSystem.cpp  InputSystem.h  PlayerInputMap.cpp  PlayerInputMap.h
src/package/: BackgroundDef.h  DefinitionRegistry.cpp  DefinitionRegistry.h  MaterialDef.h  ObjectDef.h  PackageLoader.cpp  PackageLoader.h  ProcedureDef.h
src/physics/: PhysicsSystem.cpp  PhysicsSystem.h  PhysicsWorld.cpp  PhysicsWorld.h
src/render/: Camera.cpp  Camera.h  DebugUI.cpp  DebugUI.h
src/scenario/: ScenarioDef.h  ScenarioLoader.cpp  ScenarioLoader.h
src/scripting/: LuaImGuiBindings.cpp  LuaImGuiBindings.h  LuaState.cpp  LuaState.h  LuaUIBindings.cpp  LuaUIBindings.h  SimCell.h
src/terrain/: DynamicBodyManager.cpp  DynamicBodyManager.h  FragmentTracker.cpp  FragmentTracker.h  MapGenerator.cpp  MapGenerator.h  MaterialColors.h  Terrain.cpp  Terrain.h  TerrainBitmap.cpp  TerrainBitmap.h  TerrainChunk.h  TerrainFacade.cpp  TerrainFacade.h  TerrainGen.cpp  TerrainGen.h  TerrainRenderer.cpp  TerrainRenderer.h  TerrainSimulator.cpp  TerrainSimulator.h
src/ui/: ImGuiBackend.cpp  ImGuiBackend.h  RmlUiBackend.cpp  RmlUiBackend.h  UIElement.cpp  UIElement.h  UIRenderer.cpp  UIRenderer.h  UIScreen.cpp  UIScreen.h  UISkin.cpp  UISkin.h  UISystem.cpp  UISystem.h
src/ui/backend/: RmlUi_Renderer_SDL.cpp
